@@ -1,3 +1,10 @@
+2011-08-05  Paul Pluzhnikov  <ppluzhnikov@google.com>
+
+	* solib-target.c (segment_attributes): Make them static.
+	(section_attributes, library_children, library_attributes): Likewise.
+	(library_list_children, library_list_attributes): Likesise.
+	(library_list_elements): Likewise.
+
 2011-08-05  Pedro Alves  <pedro@codesourcery.com>
 
 	* exceptions.c (throw_exception): Don't disable the current
